Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/AccountTeamSyncSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>This Object will collect the attribuites of Accout Team Member Sync with SVOC</description>
    <fields>
        <fullName>AccountUpdateCCEmail__c</fullName>
        <description>This field will hold all the email that needs to be cc&apos;d when sending the file of account updates: add emails with &apos;,&apos; saperated
Sample: test1@email.com,test2@email.com</description>
        <label>AccountUpdateCCEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountUpdateToEmail__c</fullName>
        <description>This field will hold the emails to which we need to send the list of updates as a file attachements: add emails with &apos;,&apos; saperated
Sample: test1@email.com,test2@email.com</description>
        <label>AccountUpdateToEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeAssignmentService__c</fullName>
        <description>This Field holds the service URL which will used to call to sync Account Team member changes</description>
        <label>EmployeeAssignmentService</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RecentChangesCollect__c</fullName>
        <description>This filed will hold the last time the changes to account team are collected.</description>
        <label>RecentChangesCollect</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecentExportSentMessage__c</fullName>
        <description>This fields holds the recent export result message</description>
        <label>RecentExportSentMessage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecentExportSent__c</fullName>
        <description>This field holds the datetime of the recent email sent.</description>
        <label>RecentExportSent</label>
        <type>DateTime</type>
    </fields>
    <label>AccountTeamSyncSettings</label>
</CustomObject>